# roboquant.py

./: .env  .flake8  .gitignore  LICENSE  README.md  install_id  pyproject.toml  requirements.txt
.github/skills/develop-strategies/: SKILL.md
.github/workflows/: python-package.yml  verify.yml
.zed/: settings.json  tasks.json
docs/: 4stages.md  BUILD.md  DESIGN.md
roboquant/: __init__.py  account.py  asset.py  config.py  event.py  monetary.py  order.py  roboquant.py  run.py  signal.py  timeframe.py  timeseries.py  wallet.py
roboquant/ai/: __init__.py  features.py  rl.py  strategies.py
roboquant/alpaca/: __init__.py  broker.py  feed.py
roboquant/brokers/: __init__.py  alpacabroker.py  broker.py  cryptobroker.py  ibkr.py  ibkrbroker.py  simbroker.py
roboquant/crypto/: __init__.py  cryptobroker.py  cryptofeed.py
roboquant/feeds/: __init__.py  aggregate.py  alpacafeed.py  avro.py  avrofeed.py  candlefeed.py  collect.py  cryptofeed.py  csvfeed.py  duckdbfeed.py  eventchannel.py  feed.py  feedutil.py  historic.py  historicfeed.py  live.py  parquet.py  parquetfeed.py  questdbfeed.py  randomwalk.py  sp500.json  sql.py  sqllitefeed.py  tiingo.py  tiingofeed.py  tiingohistoricfeed.py  tiingolivefeed.py  util.py  yahoo.py  yahoofeed.py
roboquant/feeds/resources/: us10.parquet
roboquant/ibkr/: __init__.py  broker.py  types.py
roboquant/journals/: __init__.py  alphabeta.py  basicjournal.py  chartingjournal.py  equitymetric.py  feedmetric.py  journal.py  marketmetric.py  marketreturnmetric.py  metric.py  metricsjournal.py  plotjournal.py  pnlmetric.py  pricemetric.py  report.py  runmetric.py  scorecard.py  tensorboard.py  tensorboardjournal.py
roboquant/ml/: __init__.py  envs.py  features.py  gymenv.py  rl.py  strategies.py  torch.py
roboquant/strategies/: __init__.py  barstrategy.py  basestrategy.py  buffer.py  cachedstrategy.py  cachingstrategy.py  candlestrategy.py  emacrossover.py  features.py  featureset.py  flextrader.py  ibsstrategy.py  multistrategy.py  nopstrategy.py  ordermanager.py  ordersizer.py  rnnstrategy.py  signalstrategy.py  smacrossover.py  strategy.py  tastrategy.py  torch.py
roboquant/ta/: __init__.py  indicators.py
roboquant/trackers/: __init__.py  alphabeta.py  basictracker.py  capmtracker.py  equitymetric.py  equitytracker.py  feedmetric.py  markettracker.py  metric.py  metricstracker.py  pricemetric.py  runmetric.py  standardtracker.py  tensorboardtracker.py  tracker.py
roboquant/traders/: __init__.py  flextrader.py  sizing.py  trader.py
samples/: alpaca_feed.py  alpaca_record.py  alpaca_record_avro.py  backtest.py  close_positions_ibkr.py  extra_logging.py  flextrader_logging.py  forwardtest_alpaca.py  forwardtest_alpaca2.py  forwardtest_alpaca_trades.py  pandas_dataframe.py  papertrade_alpaca.py  papertrade_alpaca_ibkr.py  papertrade_tiingo_ibkr.py  parquet_recording.py  plotting.py  sb3_strategy.py  sb3_strategy_quotes.py  sb3_trader.py  talib_feature.py  talib_strategy.py  tensorboard_metrics.py  torch_lstm.py  walkforward.py  walkforward_yahoo.py
tests/: common.py
tests/data/csv/: aapl.csv  amzn.csv  tsla.csv
tests/data/output/: account_repr.txt  standardtracker_repr.txt
tests/data/stooq/5_min/: ibm.us.txt
tests/data/stooq/daily/: ibm.us.txt
tests/data/yahoo/: AAPL.csv  AMZN.csv  META.csv  TSLA.csv
tests/integration/: test_alpaca.py  test_ccxt.py  test_ibkr.py  test_ibkrbroker.py  test_tiingo.py  test_tiingohistoricfeed.py  test_tiingolivefeed.py  test_yahoo.py  test_yahoofeed.py  tiingohistoricfeed_test.py  tiingolivefeed_test.py
tests/performance/: bigcsvfeed_test.py  profiling_test.py  test_alpacadelay.py  test_bigfeed.py  test_delay.py  test_profiling.py  test_tiingodelay.py  tiingodelay_test.py
tests/samples/: alpaca.py  alpaca_feed.py  alpaca_live_feed.py  alpaca_papertrade.py  alpaca_record.py  alpaca_record_avro.py  alpaca_record_parquet.py  alpaca_record_sql.py  async_run.py  backtest.py  binance_backtest.py  charts.py  chronos_prediction.py  close_positions_ibkr.py  crypto_backtest.py  dataframe.py  extra_logging.py  forwardtest_alpaca_bars.py  forwardtest_alpaca_trades.py  ibkr_close_positions.py  monetary.py  pandas_dataframe.py  papertrade_alpaca.py  papertrade_tiingo_ibkr.py  parquet_csv.py  parquet_csv_large.py  parquet_recording.py  plotting.py  sb3.py  sb3_recurrent.py  sb3_strategy.py  sb3_strategy_quotes.py  sb3_trader.py  talib_feature.py  talib_strategy.py  tensorboard_metrics.py  torch_lstm.py  torch_transformer.py  walkforward.py  walkforward_multiprocess.py  (+4 more)
tests/unit/: test_account.py  test_aggregator.py  test_alphabetatracker.py  test_asset.py  test_avrofeed.py  test_barstrategy.py  test_buffer.py  test_candlefeed.py  test_candlestrategy.py  test_capmtracker.py  test_config.py  test_crossover.py  test_csvfeed.py  test_equitytracker.py  test_features.py  test_featureset.py  test_feedutil.py  test_flextrader.py  test_journal.py  test_monetary.py  test_multistrategy.py  test_order.py  test_parquetfeed.py  test_randomwalk.py  test_rnn.py  test_rnnstrategy.py  test_roboquant.py  test_run.py  test_signal.py  test_simbroker.py  test_sqlfeed.py  test_standardtracker.py  test_strategy.py  test_ta.py  test_tastrategy.py  test_tensorboard.py  test_tensorboardtracker.py  test_timeframe.py  test_torch.py  test_torchstrategy.py  (+1 more)
