[tool.ruff]
line-length = 127

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "roboquant/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pyright]
typeCheckingMode = "standard"
# typeCheckingMode = "strict"


[project]
name = "roboquant"
dynamic = ["version"]
authors = [{ name = "roboquant team", email = "info@roboquant.org" }]
description = "A fast algo-trading platform with support for AI based strategies"
readme = "README.md"
requires-python = ">=3.11, <3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
]
keywords = [
  "trading",
  "machine learning",
  "AI",
  "investment",
  "finance",
  "crypto",
  "stocks",
  "exchange",
  "forex",
]
dependencies = [
  "numpy>=1.26.4",
  "websocket-client~=1.8.0",
  "requests>=2.32.0",
  "yfinance~=0.2.55",
  "python-ibapi-stable",
]

[project.optional-dependencies]
torch = [
  "torch>=2.6.0",
  "tensorboard>=2.19.0",
  "stable-baselines3[extra]>=2.5.0",
  "sb3-contrib>=2.5.0",
]
ibkr = ["python-ibapi-stable~=10.30.1"]
alpaca = ["alpaca-py>=0.39.0"]
avro = ["fastavro>=1.9.7"]
parquet = ["pyarrow>=19.0.0"]

[project.urls]
Homepage = "https://roboquant.org"
Repository = "https://github.com/neurallayer/roboquant.py.git"
Issues = "https://github.com/neurallayer/roboquant.py/issues"

[dependency-groups]
dev = [
  "matplotlib>=3.10.0",
  "python-dotenv>=1.0.1",
  "pyright>=1.1.396",
  "ipykernel>=6.29.5",
]
talib = [
  "ta-lib>=0.6.3"
]
