[tool.ruff]
line-length = 127

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = "none" 
# typeCheckingMode = "strict"

[tool.uv.build-backend]
module-root = ""
module-name = "roboquant"

[project]
name = "roboquant"
version = "2.3.4"
authors = [{ name = "roboquant team", email = "info@roboquant.org" }]
description = "A fast algorithmic trading platform with support for AI based strategies"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12, <3.15"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
]
keywords = [
  "algorithmic",
  "trading",
  "machine learning",
  "AI",
  "investment",
  "finance",
  "crypto",
  "stocks",
  "exchange",
  "forex",
]
dependencies = [
  "numpy>2.0.0",
  "requests>2.30.0",
  "yfinance>1.5.0",
  "pyarrow>24.0.0",
  "ta-lib==0.6.5"
]

[project.optional-dependencies]
ai = [
  "torch>=2.9.0",
  "tensorboard>=2.21.0",
  "stable-baselines3>=2.9.0",
  "sb3-contrib>=2.9.0",
]
ibkr = ["ibind[oauth]>=0.1.22"]
alpaca = ["alpaca-py>=0.43.5"]
crypto = ["ccxt>=4.5.65"]

[project.urls]
Homepage = "https://roboquant.org"
Repository = "https://github.com/neurallayer/roboquant.py.git"
Issues = "https://github.com/neurallayer/roboquant.py/issues"

[dependency-groups]
dev = [
  "matplotlib>=3.11.0",
  "python-dotenv>=1.1.0",
  "pyright>=1.1.411",
  "ipykernel>=7.3.0",
  "ipywidgets>=8.1.6",
  "chronos-forecasting>=2.3.1",
]
talib = ["ta-lib==0.6.5"]
